markdown: Fix broken padding and margins.
Switching to unitless variables for all font-size, line-height, padding and margin
styles requires assigning those variables a unit when using (e.g. @var * 1px).  I
failed to do this in a couple spots, causing the selftext box to lose its padding and
look totally weird.

Also raises the left padding on lists.  Numbers on ordered lists were falling outside
of the comment's container, and getting clipped off.  This also looked totally weird.

--- a/r2/r2/public/static/css/markdown.less
+++ b/r2/r2/public/static/css/markdown.less
@@ -240,7 +240,7 @@
   }
 
   .-lists {
-    padding-left: (@margin-large * 1px);
+    padding-left: (@margin-x-large * 1px);
   }
 
   sup {
@@ -256,11 +256,11 @@
 
 
 .link .usertext .md {
-  padding: @margin-x-small @margin-small;
+  padding: (@margin-x-small * 1px) (@margin-small * 1px);
 }
 
 .commentarea .md {
-  margin: @margin-x-small 0;
+  margin: (@margin-x-small * 1px) 0;
 }
 
 
